# eslogs

./: .gitignore  Cargo.toml  NOTICE  README.md  rust-toolchain.toml
.githooks/: prepare-commit-msg
.github/workflows/: ci.yml  release.yml  upstream-watch.yml
bench/: BASELINE.md  README.md  bench_win.ps1  compare.py  run_bench.ps1  run_bench.sh
bench/loadgen/: Cargo.toml
bench/loadgen/src/: main.rs
crates/es-logs/: Cargo.toml
crates/es-logs/src/: main.rs
crates/esl-agent/: Cargo.toml
crates/esl-agent/src/: filecollector.rs  kubernetescollector.rs  lib.rs  main.rs  oauth2.rs  persistentqueue.rs  remotewrite.rs  tail.rs
crates/esl-common/: Cargo.toml
crates/esl-common/src/: appmetrics.rs  atomicutil.rs  buildinfo.rs  bytesutil.rs  cgroup.rs  chunkedbuffer.rs  contextutil.rs  decimal.rs  disconnect_watcher.rs  easyproto.rs  encoding.rs  envflag.rs  fastnum.rs  fasttime.rs  filestream.rs  flagutil.rs  httpserver.rs  httputil.rs  lib.rs  logger.rs  memory.rs  metrics.rs  netutil.rs  procutil.rs  pushmetrics.rs  regexutil.rs  slicesutil.rs  strconv_isprint.rs  stringsutil.rs  timerpool.rs  timeutil.rs  tlsutil.rs  tzdata.rs  writeconcurrencylimiter.rs
crates/esl-common/src/bytesutil/: fast_string_matcher.rs  fast_string_transformer.rs  internstring.rs  itoa.rs
crates/esl-common/src/encoding/: zstd.rs
crates/esl-common/src/flagutil/: array.rs  bytes.rs  dict.rs  duration.rs  password.rs
crates/esl-common/src/fs/: dir_remover.rs  fsutil.rs  mod.rs  parallel.rs  reader_at.rs  sys.rs
crates/esl-common/src/metrics/: counter.rs  floatcounter.rs  gauge.rs  histogram.rs  process_metrics_linux.rs  process_metrics_windows.rs  push.rs  set.rs  summary.rs  validator.rs
crates/esl-common/src/regexutil/: goclass.rs  gofold.rs  goparse.rs  gosyntax.rs  tests.rs
crates/esl-common/tests/: tlsutil_test.rs
crates/esl-insert/: Cargo.toml
crates/esl-insert/src/: common_params.rs  datadog.rs  elasticsearch.rs  internal_insert.rs  journald.rs  jsonline.rs  lib.rs  line_reader.rs  loki.rs  loki_protobuf.rs  native_insert.rs  otel.rs  splunk.rs  syslog.rs  syslog_listeners.rs
crates/esl-logstorage/: Cargo.toml
crates/esl-logstorage/src/: arena.rs  bitmap.rs  block.rs  block_data.rs  block_header.rs  block_result.rs  block_search.rs  block_stream_merger.rs  block_stream_reader.rs  block_stream_writer.rs  bloomfilter.rs  cache.rs  chunked_allocator.rs  color_sequence.rs  column_names.rs  consts.rs  datadb.rs  delete_task.rs  encoding.rs  filenames.rs  filter.rs  filter_and.rs  filter_any_case_phrase.rs  filter_any_case_prefix.rs  filter_contains_all.rs  filter_contains_any.rs  filter_contains_common_case.rs  filter_day_range.rs  filter_eq_field.rs  filter_equals_common_case.rs  filter_exact.rs  filter_exact_prefix.rs  filter_generic.rs  filter_in.rs  filter_ipv4_range.rs  filter_ipv6_range.rs  filter_json_array_contains_any.rs  filter_le_field.rs  filter_len_range.rs  filter_noop.rs  (+137 more)
crates/esl-logstorage/src/indexdb/: mergeset.rs  mod.rs
crates/esl-logstorage/src/indexdb/mergeset/: block_header.rs  block_stream_reader.rs  block_stream_writer.rs  encoding.rs  inmemory_part.rs  merge.rs  metaindex_row.rs  mod.rs  part.rs  part_header.rs  part_search.rs  table.rs  table_search.rs  tests.rs
crates/esl-logstorage/src/parser/: helpers.rs  lexer_ext.rs  mod.rs  parse_filter.rs  parse_pipe.rs  parse_stats.rs  query.rs  query_stats.rs  tests.rs
crates/esl-select/: Cargo.toml
crates/esl-select/assets/esmui/: index.html  manifest.json
crates/esl-select/assets/esmui/assets/: FileSystemFileHandle-DXAnvdud.js  downloader-CXDt9uMb.js  index-BdZaN6k3.css  index-DiHn3JKq.js  vendor-CWtYmzdT.js
crates/esl-select/src/: csv.rs  esmui_assets.rs  internalselect.rs  lib.rs  logsql.rs  logsql_facets.rs  logsql_fields.rs  logsql_hits.rs  logsql_stats_query.rs  logsql_streams.rs  logsql_tail.rs
crates/esl-storage/: Cargo.toml
crates/esl-storage/src/: http_client.rs  lastn_optimization.rs  lib.rs  netinsert.rs  netselect.rs  proxy.rs  query_stats.rs
crates/eslogscli/: Cargo.toml
crates/eslogscli/src/: json_prettifier.rs  less_wrapper.rs  main.rs
crates/eslogsgenerator/: Cargo.toml
crates/eslogsgenerator/src/: main.rs
docs/: CONVENTIONS.md  LOGSTORAGE_PLAN.md  PARITY.md  PORT_PLAN.md  UPSTREAM_SYNC.md
docs/sync/: REPORT-FETCH_HEAD.md
scripts/: upstream_sync.py  upstream_sync_ignore.txt
