[package]
name = "esl-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "esl_agent"
path = "src/lib.rs"

[[bin]]
name = "eslagent"
path = "src/main.rs"

[dependencies]
esl-common = { path = "../esl-common" }
esl-logstorage.workspace = true
esl-insert = { path = "../esl-insert" }
esl-storage = { path = "../esl-storage" }
# cespare/xxhash/v2 equivalent for the remotewrite persistent-queue path hash
# (same crate/version esl-logstorage and esl-storage use).
xxhash-rust = { version = "0.8", features = ["xxh64"] }
# gopkg.in/yaml.v2 equivalent for kubeconfig parsing (client_config.go).
# Pure-Rust, MSVC-clean; default features off drops the encoding_rs charset
# detection we don't need (kubeconfig is UTF-8, parsed from a &str).
yaml-rust2 = { version = "0.11.0", default-features = false }

[dev-dependencies]
# Self-signed certificate generation for the TLS tests
# (dev-only; does not affect the cross-compile target closure).
rcgen = "0.13"
