[package]
name = "esl-common"
description = "Ports of Softalink LLC lib/* support packages used by EsLogs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
zstd = "0.13"
regex = "1"
memmap2 = "0.9"
# httpserver request-body decompression. Pure-Rust backends so the crate
# cross-compiles cleanly to x86_64-pc-windows-msvc (no C toolchain needed):
#   flate2 "rust_backend" uses miniz_oxide (pure Rust) for gzip/deflate;
#   snap is pure Rust for snappy block decoding.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
snap = "1"
# TLS stack (tlsutil): rustls with the `ring` crypto provider so the workspace
# cross-compiles to x86_64-pc-windows-msvc from Linux via clang-cl (no
# cmake/NASM, unlike aws-lc-rs). webpki-roots supplies default trust anchors
# (Go uses the system cert pool; see PORT NOTE in tlsutil.rs);
# rustls-pemfile parses PEM cert/key files.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
webpki-roots = "1"

[dev-dependencies]
# Self-signed certificate generation for tlsutil tests (dev-only; does not
# affect the cross-compile target closure).
rcgen = "0.13"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }
