[package]
name = "esl-common"
description = "Ports of Softalink LLC lib/* support packages used by EsLogs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
zstd = "0.13"
regex = "1"
memmap2 = "0.9"
# Compile-time flag registry (link-section based, pure Rust, MSVC-clean) so the
# `esm_flag` gauge can enumerate EVERY declared flag like Go's `flag.VisitAll`,
# not just the ones resolved or set at runtime.
linkme = "0.3"
# httpserver request-body decompression. Pure-Rust backends so the crate
# cross-compiles cleanly to x86_64-pc-windows-msvc (no C toolchain needed):
#   flate2 "rust_backend" uses miniz_oxide (pure Rust) for gzip/deflate;
#   snap is pure Rust for snappy block decoding.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
snap = "1"
# TLS stack (tlsutil): rustls with the `ring` crypto provider so the workspace
# cross-compiles to x86_64-pc-windows-msvc from Linux via clang-cl (no
# cmake/NASM, unlike aws-lc-rs). webpki-roots supplies default trust anchors
# (Go uses the system cert pool; see PORT NOTE in tlsutil.rs);
# rustls-pemfile parses PEM cert/key files.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
webpki-roots = "1"

[dev-dependencies]
# Self-signed certificate generation for tlsutil tests (dev-only; does not
# affect the cross-compile target closure).
rcgen = "0.13"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dev-dependencies]
# Unix has a system zoneinfo db (read directly in production), but the bundled
# db is the Windows production source for named IANA zones — pull it in as a
# Unix dev-dependency so the bundled-parse path is exercised by the Linux test
# suite too (see tzdata.rs test_bundled_tzdata_offsets).
tzdb_data = "0.2.5"

[target.'cfg(windows)'.dependencies]
# Bundled IANA time zone database (pure-Rust, #![no_std], #![forbid(unsafe_code)],
# MSVC-clean; only transitive dep is the pure-Rust tz-rs). Windows has no system
# zoneinfo, so named IANA zones (-syslog.timezone / -loggerTimezone, e.g.
# America/New_York) are resolved from `tzdb_data::find_raw` and parsed with the
# same `parse_tzif` used on Unix — identical offset computation.
tzdb_data = "0.2.5"
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }
