[package]
name = "esl-storage"
description = "Port of EsLogs app/eslstorage: storage lifecycle and HTTP glue"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
esl-common.workspace = true
esl-logstorage.workspace = true

[dev-dependencies]
# cespare/xxhash/v2 equivalent for the netinsert stream-hash test (same crate
# esl-logstorage uses for upstream-compatible hashes)
xxhash-rust = { version = "0.8", features = ["xxh64"] }
